# todoapp

./: .gitignore  Makefile  README.md  config.json  flake.nix  justfile  openapi.json
.github/: main.yml
backend/: Cargo.toml  Makefile  README.md  diesel.toml  example_config.json
backend/migrations/2025-08-13-084928_init/: down.sql  up.sql
backend/src/: errors.rs  handlers.rs  lib.rs  main.rs  models.rs  schema.rs
cli/: Makefile  create_task.json
client/: Cargo.toml  example_config.json  hyper-rustls.patch
client/api/: Cargo.toml  README.md
client/api/.openapi-generator/: FILES
client/api/docs/: DefaultApi.md  NewTask.md  Task.md  UpdateTask.md
client/api/src/: lib.rs
client/api/src/apis/: client.rs  configuration.rs  default_api.rs  mod.rs
client/api/src/models/: mod.rs  new_task.rs  task.rs  update_task.rs
client/src/: main.rs
