[package]
name = "backend"
description = "Todoapp backend: manage tasks"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
libsqlite3-sys = { version = "0.35.0", features = ["bundled"] }
axum = "0.8.4"
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
diesel_migrations = "2.2.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1.41"
clap = { version = "4.5.45", features = ["derive"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "debug"] }
utoipa-axum = { version = "0.2.0", features = ["debug"] }
serde_json = "1.0.142"

[dev-dependencies]
assert_cmd = "2.0.14"
tempfile = "3"
diesel_migrations = { version = "2.2.0" }

[lib]
doc = false
