[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5.57"
client_api = { path = "./api/"}
openssl = { version = "0.10.73", features = ["vendored"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
