[package]
name = "client_api"
version = "0.0.1"
authors = ["womeier@posteo.de"]
description = "Todoapp backend: manage tasks"
license = "MIT"
edition = "2021"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_with = { version = "^3.8", default-features = false, features = ["base64", "std", "macros"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
hyper = { version = "^1.3.1", features = ["full"] }
hyper-util = { version = "0.1.5", features = ["client", "client-legacy", "http1", "http2"] }
http-body-util = { version = "0.1.2" }
http = "~0.2"
base64 = "~0.7.0"
futures = "^0.3"
hyper-rustls = "0.27.7"
rustls = "0.23.32"
